# pymarl

./: .gitignore  .pre-commit-config.yaml  README.ext.md  install_sc2.sh  pyproject.toml  run.sh
docker/: Dockerfile
src/: main.py
src/utils/: logging.py
